# AntiFraud

./: README.md  TASK-README-EN.md  TASK-README.md
solution/: .gitignore  Dockerfile  README.md  compose.base.yaml  compose.local-run.yaml  compose.tests.yaml  compose.yaml  justfile  local-run.Dockerfile  nginx.dev.conf  pyproject.toml  tests.Dockerfile
solution/.config/dev/: nginx.dev.conf
solution/src/backend/application/common/: auth_provider.py  decorator.py  exception_info.py  idp.py  storage.py  uow.py
solution/src/backend/application/exception/: base.py  fraud_rule.py  transaction.py  user.py
solution/src/backend/application/forms/: base.py  fraud_rule.py  paggination.py  transaction.py  user.py
solution/src/backend/application/fraud_rule/: create.py  delete.py  dto.py  read.py  update.py  validate_dsl.py
solution/src/backend/application/service/: rule_evaluator.py
solution/src/backend/application/transaction/: create.py  dto.py  read.py
solution/src/backend/application/user/: create.py  delete.py  dto.py  read.py  update.py
solution/src/backend/bootstrap/: cli.py
solution/src/backend/bootstrap/di/: container.py
solution/src/backend/bootstrap/entrypoint/: fastapi.py
solution/src/backend/domain/: misc_types.py
solution/src/backend/domain/entity/: fraud_rule.py  transaction.py  user.py
solution/src/backend/domain/exception/: dsl.py
solution/src/backend/domain/service/: dsl.py
solution/src/backend/domain/vo/: permissions.py
solution/src/backend/infrastructure/: api_client.py  config_loader.py  redis.py
solution/src/backend/infrastructure/api/: api_client.py  exception.py  models.py
solution/src/backend/infrastructure/auth/: access_token.py  exception.py  hasher.py  login.py  (+2 more)
solution/tests/: conftest.py
solution/tests/integration/: ping.py
solution/tests/integration/fraud_rule/: test_create.py  test_delete.py  test_read.py  test_read_many.py  test_update.py  test_validate_dsl.py
solution/tests/integration/transaction/: test_create.py  test_read.py  test_read_many.py
solution/tests/integration/user/: test_create.py  test_delete.py  test_login.py  test_read.py  test_read_many.py  test_register.py  test_update.py
solution/tests/unit/: ping.py
solution/tests/utils/: exception_validation.py  misc_types.py
(+54 files in other folders)
